--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
 		"php": ">=5.3.0",
 		"symfony/yaml": "2.1.*"
 	},
+	"minimum-stability" : "dev",
 	"autoload": {
 		"psr-0": { "Silextend": "src/" }
 	}
