--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 	"license": "MIT",
 	"require": {
 		"php": ">=5.3.0",
-		"symfony/yaml": "2.1.*"
+		"symfony/yaml": ">=2.1.*"
 	},
 	"minimum-stability" : "dev",
 	"autoload": {
